--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -29,7 +29,6 @@ LIB_SRC = ['crt_utils.c']
 ####################################
 def build_utility_shared_obj(denv, prereqs):
     """Build cart utility library"""
-    prereqs.require(denv, 'mercury', headers_only=True)
     cart_utils_objs  = denv.SharedObject(LIB_SRC)
     Export('cart_utils_objs')
 
@@ -87,6 +86,8 @@ def scons():
     for header in HEADERS:
         env.Install(os.path.join('$PREFIX', 'include', 'cart'),
                     os.path.join('../include', 'cart', header))
+
+    prereqs.require(env, 'mercury', headers_only=True)
 
     denv = env.Clone()
 
