DAOS-6823 build: Move utils/sl to site_scons. (#4669)
Move the code to where scons expects it to be, rather than
in utils/sl which is a legacy of having the scons_local
git submodule in the past.

Remove LICENSE, NOTICE and README.md which are all outdated now
the code is part of daos.

Update some incorrect documentation links.
Change dockerfiles to new build location.

Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/utils/docker/Dockerfile.centos.8
+++ b/utils/docker/Dockerfile.centos.8
@@ -116,11 +116,10 @@ RUN mkdir -p /opt/daos /mnt/daos /var/run/daos_server /var/run/daos_agent &&	\
 # seconds.
 WORKDIR /home/daos/pre
 COPY SConstruct .
-COPY utils/sl utils/sl
+COPY site_scons site_scons
 COPY utils/build.config utils/
 RUN chown -R daos_server.daos_server /home/daos
 USER daos_server:daos_server
-RUN ln -s utils/sl site_scons
 
 # Control what to build.  By default Dockerfiles build everything to allow for
 # ease-of-use for users, however in CI everything is turned off and then
@@ -155,12 +154,12 @@ LABEL DAOS=stage1
 
 WORKDIR /home/daos/daos/
 COPY VERSION LICENSE ftest.sh SConstruct ./
+COPY site_scons site_scons
 COPY utils utils
 COPY src src
 USER root:root
 RUN chown -R daos_server.daos_server /home/daos
 USER daos_server:daos_server
-RUN ln -s utils/sl site_scons
 
 # select compiler to use
 ARG COMPILER=gcc
