--- a/src/tests/ftest/soak/soak_faults.yaml
+++ b/src/tests/ftest/soak/soak_faults.yaml
@@ -126,8 +126,9 @@ ior_faults:
         - 'RP_2G1'
     dfs_dir_oclass:
         - 'RP_2G1'
-dfuse:
-    mount_dir: "/tmp/daos_dfuse/"
+    dfuse:
+        mount_dir: "/tmp/daos_dfuse/ior/"
+        disable_caching: True
 hdf5_vol:
     plugin_path: "/usr/lib64/mpich/lib"
 events:
