--- a/src/tests/ftest/soak/soak_harassers.yaml
+++ b/src/tests/ftest/soak/soak_harassers.yaml
@@ -137,12 +137,15 @@ ior_harasser:
         - 'RP_2G1'
     dfs_dir_oclass:
         - 'RP_2G1'
+    dfuse:
+        mount_dir: "/tmp/daos_dfuse/ior"
+        disable_caching: True
 fio_harasser:
   names:
       - global
       - test
   global:
-    directory: "/tmp/daos_dfuse/"
+    directory: "/tmp/daos_dfuse/fio/"
     ioengine: 'libaio'
     thread: 1
     group_reporting: 1
@@ -161,6 +164,9 @@ fio_harasser:
         - 'randrw'
     oclass:
         - 'RP_2G1'
+  dfuse:
+    mount_dir: "/tmp/daos_dfuse/fio/"
+    disable_wb_caching: True
 mdtest_harasser:
     # maximum timeout for a single job in test in minutes
     job_timeout: 20
@@ -189,8 +195,9 @@ mdtest_harasser:
     dfs_oclass: 'RP_2G1'
     dfs_dir_oclass: 'RP_2G1'
     dfs_destroy: False
-dfuse:
-    mount_dir: "/tmp/daos_dfuse/"
+    dfuse:
+        mount_dir: "/tmp/daos_dfuse/mdtest/"
+        disable_caching: True
 hdf5_vol:
     plugin_path: "/usr/lib64/mpich/lib"
 events:
