--- a/src/tests/ftest/cart/rpc/cart_rpc_one_node_with_swim_notification_on_rank_eviction.yaml
+++ b/src/tests/ftest/cart/rpc/cart_rpc_one_node_with_swim_notification_on_rank_eviction.yaml
@@ -39,4 +39,5 @@ tests: !mux
       - "--name client_group --attach_to tg_srv_grp_swim_test --rank 0,1 --verify_swim_status 'rank2=dead'  --skip_shutdown --skip_check_in"
       - "--name client_group --attach_to tg_srv_grp_swim_test --rank 0,1 --verify_swim_status 'rank1=alive' --skip_shutdown --skip_check_in"
       - "--name client_group --attach_to tg_srv_grp_swim_test --rank 0,1 --verify_swim_status 'rank0=alive' --skip_shutdown --skip_check_in"
+      - "--name client_group --attach_to tg_srv_grp_swim_test --rank 0,1 --disable_swim --skip_shutdown --skip_check_in"
       - "--name client_group --attach_to tg_srv_grp_swim_test --rank 0,1 --shut_only"
