--- a/src/utils/SConscript
+++ b/src/utils/SConscript
@@ -30,13 +30,8 @@ def scons():
     daos_hdlrs_src = ['daos_hdlr.c', 'daos_autotest.c', 'daos_dfs_hdlr.c']
     daos_hdlrs_lib = daos_build.library(denv, 'daos_cmd_hdlrs',
                                         daos_hdlrs_src,
-                                        SHLIBVERSION=API_VERSION,
                                         LIBS=libs)
-    if hasattr(env, 'InstallVersionedLib'):
-        env.InstallVersionedLib('$PREFIX/lib64/', daos_hdlrs_lib,
-                                SHLIBVERSION=API_VERSION)
-    else:
-        env.Install('$PREFIX/lib64/', daos_hdlrs_lib)
+    env.Install('$PREFIX/lib64/', daos_hdlrs_lib)
     libs += ['daos_cmd_hdlrs']
 
     Export('daos_hdlrs_lib')
@@ -45,7 +40,7 @@ def scons():
     daos_obj = [cmd_parser, dc_credit]
     daos_src = ['daos.c', 'daos_obj_ctl.c']
 
-    daos = daos_build.program(denv, 'daos', [daos_src, daos_obj], LIBS=libs)
+    daos = daos_build.program(denv, 'daos_old', [daos_src, daos_obj], LIBS=libs)
     denv.Install('$PREFIX/bin/', daos)
 
 if __name__ == "SCons.Script":
