--- a/src/client/java/pom.xml
+++ b/src/client/java/pom.xml
@@ -13,6 +13,7 @@
   <url>http://daos.io</url>
 
   <properties>
+    <commons-lang3.version>3.7</commons-lang3.version>
     <junit.platform.version>1.4.0</junit.platform.version>
     <junit.jupiter.version>5.4.0</junit.jupiter.version>
     <slf4j.version>1.7.25</slf4j.version>
@@ -33,6 +34,16 @@
       <url>https://opensource.org/licenses/BSDplusPatent</url>
     </license>
   </licenses>
+
+  <developers>
+    <developer>
+      <id>jiafuzha</id>
+      <name>Jiafu Zhang</name>
+      <email>jiafu.zhang@intel.com</email>
+      <organization>Intel</organization>
+      <organizationUrl>http://www.intel.com/</organizationUrl>
+    </developer>
+  </developers>
 
   <scm>
     <connection>scm:git:git://github.com/daos-stack/daos.git</connection>
@@ -289,9 +300,9 @@
         <version>${log4j.version}</version>
       </dependency>
       <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>2.6</version>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+	<version>${commons-lang3.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
