DAOS-7478 metrics: add memory counters
Track a few metrics to help diagnose out-of-memory issues:
- per-target number of committed entries for all the containers
  managed by the target
- same for committable entries
- amount of DMA buffers allocated by each target

The latter required to integrate the bio library as a engine
module using TLS.

But also:
- Specify units for the few remaining metrics that were missing it.
- Change indenting of daos_metrics utility to make it more readable.

Signed-off-by: Johann Lombardi <johann.lombardi@intel.com>

--- a/src/engine/SConscript
+++ b/src/engine/SConscript
@@ -9,7 +9,7 @@ def scons():
 
     denv.Append(CPPDEFINES=['-DDAOS_PMEM_BUILD'])
     libraries = ['daos_common_pmem', 'gurt', 'cart', 'vos_srv']
-    libraries += ['bio', 'dl', 'uuid', 'pthread', 'abt']
+    libraries += ['bio_srv', 'dl', 'uuid', 'pthread', 'abt']
     libraries += ['hwloc', 'pmemobj', 'protobuf-c', 'isal']
 
     prereqs.require(denv, 'hwloc', 'argobots', 'protobufc', 'isal')
