refactor control plane library deps
Signed-off-by: Tom Nabarro <tom.nabarro@intel.com>

--- a/src/control/SConscript
+++ b/src/control/SConscript
@@ -184,8 +184,7 @@ def scons():
     # Sets CGO_LDFLAGS for rpath options
     daos_build.add_rpaths(denv, "..", True, True)
 
-    denv.AppendENVPath("CGO_CFLAGS", denv.subst("$_CPPINCFLAGS"),
-                       sep=" ")
+    denv.AppendENVPath("CGO_CFLAGS", denv.subst("$_CPPINCFLAGS"), sep=" ")
 
     agentbin = install_go_bin(denv, gosrc, None, "daos_agent", "daos_agent")
     dmgbin = install_go_bin(denv, gosrc, None, "dmg", "dmg")
@@ -204,17 +203,10 @@ def scons():
                             "-L$BUILD_DIR/src/cart "
                             "-L$SPDK_PREFIX/lib "
                             "-L$OFI_PREFIX/lib $_RPATH")
-    # Explicitly link RTE & SPDK libs for CGO access (need for clang build).
-    ldopts = cgolibdirs + " -lspdk_env_dpdk -lspdk_thread -lspdk_bdev" + \
-             " -lspdk_accel -lrte_mempool  -lrte_mempool_ring" + \
-             " -lrte_bus_pci -lrte_pci -lrte_ring -lrte_mbuf" + \
-             " -lrte_eal -lrte_kvargs -lrte_power -lspdk_bdev_aio" + \
-             " -lspdk_bdev_nvme -lspdk_bdev_malloc -lspdk_conf" + \
-             " -lspdk_blob -lspdk_nvme -lspdk_util -lspdk_json" + \
-             " -lspdk_jsonrpc -lspdk_rpc -lspdk_trace" + \
-             " -lspdk_sock -lspdk_log -lspdk_notify" + \
-             " -lspdk_blob_bdev -lspdk_vmd -lnuma -ldl"
-
+    # Explicitly link RTE & SPDK libs for CGO access
+    ldopts = cgolibdirs +                                                     \
+             " -lspdk_env_dpdk -lspdk_nvme -lspdk_vmd -lrte_mempool" +        \
+             " -lrte_mempool_ring -lrte_bus_pci -lnvme_control -lnuma -ldl"
     senv.AppendENVPath("CGO_LDFLAGS", ldopts, sep=" ")
 
     senv.AppendENVPath("CGO_CFLAGS",
