--- a/utils/docker/Dockerfile.centos.7
+++ b/utils/docker/Dockerfile.centos.7
@@ -109,8 +109,10 @@ RUN dnf -y install deltarpm && \
         make \
         man \
         maven \
+        meson \
         nasm \
         ndctl \
+        ninja \
         numactl \
         numactl-devel \
         openmpi3-devel \
@@ -128,6 +130,7 @@ RUN dnf -y install deltarpm && \
         python36-pylint \
         python36-requests \
         python36-tabulate \
+        python36-pyelftools \
         python36-pyxattr \
         python36-PyYAML \
         python36-scons \
