Use bash again Try adding doc to copy command
Signed-off-by: Jeff Olivier <jeffrey.v.olivier@intel.com>

--- a/utils/docker/Dockerfile.centos.8
+++ b/utils/docker/Dockerfile.centos.8
@@ -209,6 +209,7 @@ COPY VERSION LICENSE ftest.sh SConstruct ./
 COPY site_scons site_scons
 COPY utils utils
 COPY src src
+COPY doc doc
 USER root:root
 RUN chown -R daos_server.daos_server /home/daos
 USER daos_server:daos_server
