correct elftools package name
Signed-off-by: Tom Nabarro <tom.nabarro@intel.com>

--- a/utils/docker/Dockerfile.centos.7
+++ b/utils/docker/Dockerfile.centos.7
@@ -121,7 +121,7 @@ RUN dnf -y install deltarpm && \
         patch \
         patchelf \
         pciutils \
-        python-pyelftools \
+        python3-pyelftools \
         python36-Cython \
         python36-devel \
         python36-distro \
