--- a/src/tests/ftest/control/daos_admin_privileged.yaml
+++ b/src/tests/ftest/control/daos_admin_privileged.yaml
@@ -15,9 +15,8 @@ server_config:
   name: daos_server
   port: 10001
   servers:
-    # Uncomment once DAOS-4287 has been closed.
-    # bdev_class: nvme
-    # bdev_list: ["aaaa:aa:aa.a","bbbb:bb:bb.b"]
+    bdev_class: nvme
+    bdev_list: ["aaaa:aa:aa.a","bbbb:bb:bb.b"]
     scm_class: dcpm
     scm_list: ["/dev/pmem0"]
   transport_config:
