CART-963 tests: Rm src/include/cart from CPPPATH
 * Rm src/include/cart from CPPPATH
 * Rm crt_utils.h from HEADERS list

Skip-func-test-leap15: false
Skip-func-test-el8: false
Skip-build-leap15-rpm: true
Skip-func-test-leap15: true
Skip-build-ubuntu-clang: true
Skip-build-leap15-icc: true
Skip-coverity-test: true
Parallel-build: true
Quick-build: true
Skip-unit-tests: true
Skip-nlt: true
Skip-unit-test: true
Skip-unit-test-memcheck: true
Skip-coverity-test: true
Skip-func-hw-test-small: true
Skip-func-hw-test-medium: true
Skip-func-hw-test-large: true

Signed-off-by: Ethan Mallove <ethanx.a.mallove@intel.com>

--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -13,7 +13,7 @@ import daos_build
 # pylint: disable=ungrouped-imports
 import SCons.Action
 
-HEADERS = ['api.h', 'iv.h', 'types.h', 'swim.h', 'crt_utils.h']
+HEADERS = ['api.h', 'iv.h', 'types.h', 'swim.h']
 
 SRC = ['crt_bulk.c', 'crt_context.c', 'crt_corpc.c',
        'crt_ctl.c', 'crt_debug.c', 'crt_group.c', 'crt_hg.c', 'crt_hg_proc.c',
@@ -81,7 +81,6 @@ def scons():
     env.AppendUnique(CPPPATH=[Dir('.').srcnode()])
     env.AppendUnique(CPPPATH=[Dir('include').srcnode()])
     env.AppendUnique(CPPPATH=[Dir('../gurt').srcnode()])
-    env.AppendUnique(CPPPATH=['#/src/include/cart'])
 
     for header in HEADERS:
         env.Install(os.path.join('$PREFIX', 'include', 'cart'),
