install elftools after adding PR-repo in dockerfile
Quick-build: true
PR-repos-el7: pyelftools@PR-1

Signed-off-by: Tom Nabarro <tom.nabarro@intel.com>

--- a/utils/docker/Dockerfile.centos.7
+++ b/utils/docker/Dockerfile.centos.7
@@ -121,7 +121,6 @@ RUN dnf -y install deltarpm && \
         patch \
         patchelf \
         pciutils \
-        python3-pyelftools \
         python36-Cython \
         python36-devel \
         python36-distro \
@@ -198,6 +197,9 @@ RUN if [ "x$BULLSEYE" != "x" ]; then \
       rm -f bullseye.tar; \
       rm -rf bullseye; \
     fi
+
+# Add packages provided by PR-repos that have just been set up.
+RUN dnf -y install python3-pyelftools
 
 # The COPY command has a --chown option but it's not well supported so copy as
 # root then run a chown command which is frustrating as the copy can take a few
