--- a/src/tests/ftest/control/dmg_telemetry_basic.yaml
+++ b/src/tests/ftest/control/dmg_telemetry_basic.yaml
@@ -1,17 +1,21 @@
 hosts:
   test_servers:
     - server-A
+    - server-B
   test_clients:
     - client-A
 timeouts:
   test_telemetry_list: 60
   test_container_telemetry: 100
+server_config:
+  name: daos_server
+  servers:
+    scm_size: 16
 pool:
-  scm_size: 10G
+  scm_size: 8G
   control_method: dmg
 container:
   control_method: daos
 test:
-  metric_list_qty: 160
   container_qty: 10
   open_close_qty: 3
