--- a/src/tests/ftest/osa/osa_offline_reintegration.yaml
+++ b/src/tests/ftest/osa/osa_offline_reintegration.yaml
@@ -111,5 +111,7 @@ rebuild:
   test_with_rebuild: True
 checksum:
   test_with_checksum: False
+test_rf:
+  test_with_rf: True
 blank_node:
   test_with_blank_node: True
