DAOS-6872 test: re-enable data mover copy_space test
Quick-Functional: true
Test-tag: dm_negative_space_dcp

The test fails with multi-processes. For now, enable with a
single process until the multi-process issue is resolved.

Signed-off-by: Dalton Bohning <daltonx.bohning@intel.com>

--- a/src/tests/ftest/datamover/dm_negative.yaml
+++ b/src/tests/ftest/datamover/dm_negative.yaml
@@ -1,3 +1,25 @@
+iters1: !mux
+    iter1:
+        iter: 1
+    iter2:
+        iter: 2
+    iter3:
+        iter: 3
+    iter4:
+        iter: 4
+    iter5:
+        iter: 5
+iters12: !mux
+    iter1:
+        iter: 1
+    iter2:
+        iter: 2
+    iter3:
+        iter: 3
+    iter4:
+        iter: 4
+    iter5:
+        iter: 5
 hosts:
     test_servers:
         - server-A
@@ -28,3 +50,4 @@ dcp:
         np: 3
 dfuse:
     mount_dir: "/tmp/daos_dfuse"
+    disable_caching: True
