--- a/utils/docker/Dockerfile.centos.7
+++ b/utils/docker/Dockerfile.centos.7
@@ -133,6 +133,7 @@ RUN dnf -y install deltarpm && \
         python36-scons \
         sg3_utils \
         sudo \
+        tbb-devel \
         valgrind-devel \
         yasm && \
     dnf clean all
