--- a/utils/docker/Dockerfile.centos.8
+++ b/utils/docker/Dockerfile.centos.8
@@ -143,6 +143,7 @@ RUN dnf -y upgrade && \
         python3-yaml \
         sg3_utils \
         sudo \
+        tbb-devel \
         valgrind-devel \
         yasm && \
     dnf clean all
