--- a/debian/control
+++ b/debian/control
@@ -4,33 +4,34 @@ Priority: optional
 Maintainer: daos-stack <daos@daos.groups.io>
 Build-Depends: debhelper (>= 10),
                dh-python,
+               dpdk-dev,
+               golang-go,
+               libabt-dev,
+               libboost-dev,
                libcmocka-dev,
+               libcunit1-dev,
                libfabric-dev (>= 1.12.0),
+               libfuse3-dev,
                libhwloc-dev,
-               libopenmpi-dev,
-               libssl-dev,
-               libyaml-dev,
+               libipmctl-dev,
+               libisal-crypto-dev,
+               libjson-c-dev,
+               liblz4-dev,
                libmercury-dev (= 2.0.1~rc1-1),
-               scons,
-               uuid-dev,
+               libopenmpi-dev,
+               libpmemobj-dev (>= 1.11),
+               libprotobuf-c-dev,
+               libraft-dev (= 0.7.3-1382.g3fa7f4e),
+               libspdk-dev,
+               libssl-dev,
+               libtbb-dev,
+               libyaml-dev,
                pkg-config,
                python3-dev,
                python3-distro,
-               libabt-dev,
-               libpmemobj-dev (>= 1.11),
-               libfuse3-dev,
-               libprotobuf-c-dev,
-               libjson-c-dev,
-               dpdk-dev,
-               libisal-crypto-dev,
-               libcunit1-dev,
-               golang-go,
-               libboost-dev,
-               libspdk-dev,
-               libipmctl-dev,
-               libraft-dev (= 0.7.3-1382.g3fa7f4e),
                python3-tabulate,
-               liblz4-dev
+               scons,
+               uuid-dev
 Standards-Version: 4.1.2
 Homepage: https://wiki.hpdd.intel.com/display/DC/DAOS+Community+Home
 Vcs-Git: https://github.com/daos-stack/daos.git
