--- a/.dockerignore
+++ b/.dockerignore
@@ -11,6 +11,7 @@
 !LICENSE
 !ftest.sh
 !site_scons
+!Doxyfile
 
 # Now disallow extra files which may be present but are not required.
 # Include the rdb repo as well.
